    machine-readable output in a simple JSON-based format
  - support for subAssert (allows abstraction over assertions but keeps error locations)
  - don't depend on unix under Windows
  - added timing information to the output
  - possibility to list all tests
  - several bugfixes, especially related to location information in presence
    of an extra cpp invocation
  - backwards incompatibilities:
    + Test.Framework now longer exports all of Test.Framework.TestManager and
      Test.Framework.BlackBoxTest. For modules that only define tests, no changes
      should be necessary. However, you likely need to adjust your test runner
      module by importing Test.Framework.TestManager and possibly Test.Framework.BlackBoxTest.
    + Some reorganization in Test.Framework.TestManager and related modules, introduction
      of Test.Framework.TestTypes. Usually, your code should not be affected
      by these changes.

* 0.9.0.0 (2012-09-26)
  NOTE: this version is NOT backwards compatible with 0.8.*. The documentation on
  hackage describes what you need to do in order to upgrade.

  - Totally reworked how tests are collected
  - Greatly improved documentation (fixes issue #2)
  - Added assertThrowsIO and similar functions (fixes issue #6)
  - Added htfMain function

* 0.8.2.0 (2012-01-30)
  - Assertions can be run via runTest
  - Support for assertNotEqual
  - Bugfixes

* 0.8.1.1 (2011-11-07)
  - Bugfixes

* 0.8.1.0 (2011-11-07)
  - fixed build dependencies to include process 1.1.*

* 0.8.1.0 (2011-10-01)
  - multi-line diff with pretty-printing
  - bugfixes
  - build support for GHC 7.2.1

* 0.8.0.0 (2011-09-20)
  - support for `--quiet' option to report failures only
  - color support
  - diff support: if an equality assertions fails, HTF shows a diff of
    the expected and the given value
  - more uniform output
  - tests to execute are now given by a regular expression,
    tests to ignored are prefixed with `--not'

* 0.7.1.0 (2011-07-08)