@@ -62,14 +62,14 @@ Description:
       annotation, use the symbol @htf_importedTests@ for referencing
       the imported tests. See "Test.Framework.Tutorial" for details.
 
-Tested-With:      
+Tested-With:
                   GHC==7.0.4,
                   GHC==7.2.1,
                   GHC==7.4.1,
                   GHC==7.4.2,
                   GHC==7.6.1
 Build-Type:       Simple
-Cabal-Version:    >= 1.6
+Cabal-Version:    >= 1.10
 Extra-Source-Files:
   README.md
   TODO.org
@@ -82,33 +82,36 @@ Source-Repository head
 Executable htfpp
   Main-Is:          HTFPP.hs
   Build-Depends:    cpphs >= 1.12,
-                    haskell-src-exts >= 1.11 && < 1.14,
-                    base == 4.*
+                    haskell-src-exts >= 1.11,
+                    old-time >= 1.1,
+                    directory >= 1.2,
+                    base >= 4
   Other-Modules:
     Test.Framework.Preprocessor
     Test.Framework.HaskellParser
+  Default-language:  Haskell2010
 
 Library
-  Build-Depends:    HUnit >= 1.2.5 && < 1.3,
-                    QuickCheck >= 2.3 && < 2.6,
-                    base == 4.*,
-                    random == 1.0.*,
-                    containers >= 0.3 && < 0.6,
-                    process >= 1.0 && < 1.2,
-                    directory >= 1.0 && < 1.3,
+  Build-Depends:    HUnit >= 1.2.5,
+                    QuickCheck >= 2.3,
+                    base >= 4,
+                    random >= 1.0,
+                    containers >= 0.3,
+                    process >= 1.0,
+                    directory >= 1.0,
                     mtl >= 1.1 && < 2.2,
-                    monad-control == 0.3.*,
-                    lifted-base >= 0.1 && < 0.3,
-                    pretty >= 1.0 && < 1.2,
-                    Diff >= 0.1.3 && < 0.2,
-                    bytestring >= 0.9 && < 0.11,
-                    regex-compat >= 0.92 && < 0.96,
-                    haskell-src-exts >= 1.11 && < 1.14,
-                    aeson == 0.6.*,
-                    text == 0.11.*,
-                    old-time == 1.1.*
+                    monad-control >= 0.3,
+                    lifted-base >= 0.1,
+                    pretty >= 1.0,
+                    Diff >= 0.1.3,
+                    bytestring >= 0.9,
+                    regex-compat >= 0.92,
+                    haskell-src-exts >= 1.11,
+                    aeson >= 0.6,
+                    text >= 0.11,
+                    old-time >= 1.1
   if !os(windows)
-    Build-Depends:   unix >= 2.4 && < 2.7
+    Build-Depends:   unix >= 2.4
   Exposed-Modules:
     Test.Framework
     Test.Framework.HUnitWrapper
@@ -128,4 +131,22 @@ Library
     Test.Framework.Colors
     Test.Framework.Diff
     Test.Framework.Process
+  Default-language:  Haskell2010
   -- Ghc-Options: -fwarn-unused-imports -fwarn-unused-binds
+
+Test-Suite TestHTF
+  Main-is:           TestHTF.hs
+  Hs-Source-Dirs:    tests
+  Type:              exitcode-stdio-1.0
+  Build-depends:     base >= 4,
+                     bytestring >= 0.10,
+                     aeson >= 0.6,
+                     unordered-containers >= 0.2,
+                     temporary >= 1.1,
+                     text >= 0.11,
+                     process >= 1.0,
+                     filepath >= 1.1,
+                     directory >= 1.1,
+                     regex-compat >= 0.92,
+                     HTF
+  Default-language:  Haskell2010
