@@ -1,6 +1,0 @@
-.PHONY: run
-
-run:
-	cabal configure
-	cabal build
-	dist/build/test/test
