@@ -5,11 +5,21 @@ Build-type:    Simple
 
 Executable test
   Main-is: TestHTF.hs
-  Build-depends: base >= 4, HTF, bytestring == 0.10.*, aeson == 0.6.*, unordered-containers == 0.2.*, temporary == 1.1.*, text == 0.11.*
+  Build-depends:     base >= 4,
+                     HTF,
+                     bytestring >= 0.10,
+                     aeson >= 0.6,
+                     unordered-containers >= 0.2,
+                     temporary >= 1.1,
+                     text >= 0.11,
+                     directory >= 1.1,
+                     filepath >= 1.1,
+                     process >= 1.0,
+                     regex-compat >= 0.92
   Default-language:  Haskell2010
 
 Test-Suite tutorial
   Type:              exitcode-stdio-1.0
   Main-is:           Tutorial.hs
-  Build-depends:     base == 4.*, HTF == 0.10.*
+  Build-depends:     base >= 4, HTF == 0.10.*
   Default-language:  Haskell2010
